[project]
name = "parentpass-chatbot-api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
dependencies = [
    "aiohttp>=3.9.0",
    "baml-py==0.90.2",
    "fastapi>=0.115.12",
    "google-cloud-bigquery>=3.34.0",
    "pydantic>=2.11.4",
    "pyodbc>=5.2.0",
    "python-dotenv>=1.1.0",
    "requests>=2.32.3",
    "uvicorn>=0.34.2",
]
